[tool.poetry]
name = "projet-scoring"
version = "0.1.0"
description = ""
authors = [
    "CHEKALINA Alisa",
    "CRISTEA Carmen",
    "GASPARIN Lia",
    "VO Nguyen Thao Nhi"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
ace-tools = "^0.0"
association-metrics = "^0.0.1"
statsmodels = "^0.14.4"
optbinning = "^0.19.0"
feature-engine = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
